--- a/week 2/wwr/styles/site-plan-rafting.css
+++ b/week 2/wwr/styles/site-plan-rafting.css
@@ -2,18 +2,19 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Tagesschrift&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Tagesschrift&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #211f33   ;
   --secondary-color: #895737 ;
-  --accent1-color: #5c9998;
+  --accent1-color: #418f8d;
   --accent2-color: #ebebeb;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Tagesschrift;
-  --paragraph-font: "Roboto Flex", Helvetica, sans-serif;
+  --paragraph-font: "Nunito Sans", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000000;  /* headlines on a white background */ 
@@ -22,7 +23,7 @@ Fonts are separated by a & */
   --paragraph-color-on-color: #ebebeb; /* paragraph text on a colored background */ 
   --paragraph-background-color:#211f33;
   --nav-link-color: #ebebeb;
-  --nav-background-color: #5c9998;
+  --nav-background-color: #418f8d;
   --nav-hover-link-color: #ebebeb;
   --nav-hover-background-color: #649291;
 }
