--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -58,6 +58,7 @@ header{
 
 #hero-msg h1, #hero-msg h4{
     text-align: center;
+    color:#31292a;
 }
 
 #hero-img{
@@ -85,7 +86,7 @@ main section{
 }
 
 .msg{
-    background-color:#744253
+    background-color:#744253;
 }
 
 .msg h2{
@@ -106,7 +107,7 @@ nav a:hover {
     background-color:#C78283;
     color:white;
 }
-#rivers-card h2, #rapids-card h2, #camping-card h2{
+.rivers-card h2, .rapids-card h2, .camping-card h2{
     color:#31292a;
 }
 
