--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Tagesschrift&display=swap');
+
+
 #background{
     height:725px;
     background-color:#B49286;
@@ -5,17 +8,35 @@
 
 body{
     background-color:#edddd0;
+    font-family: 'Nunito Sans', Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 .book{
     background-color:#C78283;
     color:#31292a;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
+
+.card-img{
+    border: 10px solid #C78283;
+    border-radius: 10px;
+}
+
 .join{
     background-color:rgb(226, 218, 200);
     color:black;
     text-decoration: none; 
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color:white;
@@ -34,6 +55,8 @@ body{
 footer{
     background-color:#744253;
     color:black;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a{
@@ -52,6 +75,10 @@ footer p{
 footer p:hover{
     text-decoration: underline;
 }
+
+footer .social img{
+    padding-top: 15px;
+}
 header{
     background-color:#744253;
 }
@@ -67,46 +94,76 @@ header{
 
 .home-title{
     color:#31292a;
+    font-family: Tagesschrift, 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
-
+h2{
+    margin: 0;
+}
 h4{
     color:#31292a;
 }
 
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 
 .logo{
     width: 80px;
 }
 
+#logo_link{
+    padding-top: 5px;
+}
+
 main section{
     text-align: center;
 }
 
+main section img{
+    box-sizing: border-box;
+}
+
+.mountains{
+    margin-top: 150px;
+    margin-bottom: 100px;
+}
+
 .msg{
     background-color:#744253;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2{
     color:rgb(226, 218, 200);
+    font-family: Tagesschrift;
 }
 
 .msg p{
     color:rgb(226, 218, 200);
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 
 nav a {
     text-align: center;
     color:white;
     text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover {
     background-color:#C78283;
     color:white;
 }
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
 .rivers-card h2, .rapids-card h2, .camping-card h2{
     color:#31292a;
 }
