--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,17 +1,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Tagesschrift&display=swap');
 
-
-#background{
-    height:725px;
-    background-color:#B49286;
-}
-
 body{
     background-color:#edddd0;
     font-family: 'Nunito Sans', Arial, sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
+}
+
+#content{
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+header{
+    background-color:#744253;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+#logo_link{
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+.logo{
+    width: 80px;
+}
+
+nav {
+    display:flex;
+    justify-content: space-around;
+}
+nav a {
+    text-align: center;
+    color:white;
+    text-decoration: none;
+    padding: 35px;
+}
+
+nav a:hover {
+    background-color:#C78283;
+    color:white;
+}
+
+#hero {
+    display:grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-img{
+    width: 100%
+}
+
+#hero-msg{
+    text-align: center;
+    color:#31292a;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    
+}
+#hero-msg h4, #hero-msg h1{
+    color:white;
+}
+
+.home-title{
+    color:#31292a;
+    font-family: Tagesschrift, 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+h4{
+    color:#31292a;
+}
+
+.button-box{
+    text-align: center;
 }
 
 .book{
@@ -24,9 +98,100 @@ body{
     border-radius: 5px;
 }
 
+.book:hover, .join:hover{
+    background-color:white;
+    color:#31292a;
+}
+
+main section{
+    text-align: center;
+}
+
+main section img{
+    box-sizing: border-box;
+}
+
+.home-grid{
+    display:grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+ .camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+ }
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
 .card-img{
     border: 10px solid #C78283;
     border-radius: 10px;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.icon{
+    width: 80px;
+    padding-top: 10px;
+}
+
+h2{
+    margin: 0;
+}
+.river
+.rivers-card h2, .rapids-card h2, .camping-card h2{
+    color:#31292a;
+}
+
+#background{
+    height:725px;
+    background-color:#B49286;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains{
+    margin-top: 150px;
+    margin-bottom: 100px;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg{
+    background-color:#744253;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2{
+    color:rgb(226, 218, 200);
+    font-family: Tagesschrift;
+}
+
+.msg p{
+    color:rgb(226, 218, 200);
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 
 .join{
@@ -38,25 +203,15 @@ body{
     margin-top: 50px;
     border-radius: 5px;
 }
-.book:hover, .join:hover{
-    background-color:white;
-    color:#31292a;
-}
-
-.button-box{
-    text-align: center;
-}
-
-#content{
-    max-width: 1600px;
-    margin: 0 auto;
-}
 
 footer{
     background-color:#744253;
     color:black;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a{
@@ -79,95 +234,52 @@ footer p:hover{
 footer .social img{
     padding-top: 15px;
 }
-header{
-    background-color:#744253;
-}
-
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
-    color:#31292a;
-}
-
-#hero-img{
-    width: 100%
-}
-
-.home-title{
-    color:#31292a;
-    font-family: Tagesschrift, 'Bradley Hand', sans-serif;
-    font-size: 2em;
-    margin-top: 10px;
-}
-h2{
-    margin: 0;
-}
-h4{
-    color:#31292a;
-}
-
-.icon{
-    width: 80px;
-    padding-top: 10px;
-}
-
-.logo{
-    width: 80px;
-}
-
-#logo_link{
-    padding-top: 5px;
-}
-
-main section{
-    text-align: center;
-}
-
-main section img{
-    box-sizing: border-box;
-}
-
-.mountains{
-    margin-top: 150px;
-    margin-bottom: 100px;
-}
-
-.msg{
-    background-color:#744253;
-    line-height: 1.5em;
-    padding: 35px;
-}
-
-.msg h2{
-    color:rgb(226, 218, 200);
-    font-family: Tagesschrift;
-}
-
-.msg p{
-    color:rgb(226, 218, 200);
-    font-size: 0.8em;
-    padding-bottom: 15px;
-}
-
-nav a {
-    text-align: center;
-    color:white;
-    text-decoration: none;
-    padding: 35px;
-}
-
-nav a:hover {
-    background-color:#C78283;
-    color:white;
-}
-
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
-}
-
-.rivers-card h2, .rapids-card h2, .camping-card h2{
-    color:#31292a;
-}
 
 .x{
     width: 64px
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
