--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -282,7 +282,7 @@ details .content{
 details summary{
     text-align:center;
     cursor: pointer;
-    font-family: Tagesschrift, 'Bradley Hand', sans-serif;;
+    font-family: Tagesschrift, 'Bradley Hand', sans-serif;
     color:rgb(226, 218, 200);
     display: flex;
     justify-content: space-between;
@@ -308,6 +308,22 @@ details {
 details[open] summary{
     background: #C78283;
 
+}
+
+/* New Page */
+
+.contact-grid h1{
+text-align: center;
+font-family: Tagesschrift, 'Bradley Hand', sans-serif;
+margin-top: 50px;
+margin-bottom: 100px;
+color:#C78283;
+}
+
+.contact-grid img{
+    width: 1000px;
+    display: block;
+    margin: auto;
 }
 
 @media screen and (max-width: 900px) {
