--- a/travel/styles/travel.css
+++ b/travel/styles/travel.css
@@ -1,3 +1,13 @@
 .home-grid img{
     width:50%;
 }
+.euro-grid img{
+    width:50%;
+}
+#hero-img{
+    width: 50%;
+}
+
+.africa-grid img{
+    width: 50%;
+}
