--- a/travel/styles/travel.css
+++ b/travel/styles/travel.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Short+Stack&display=swap');
 
 .home-grid img{
-    width:50%;
+    width:75%;
 }
 .euro-grid img{
     width:50%;
@@ -42,7 +42,7 @@ header{
 }
 
 nav {
-    display:flex;
+    display: flex;
     justify-content: space-around;
     margin-top: 25px;
 }
@@ -58,16 +58,18 @@ nav a:hover {
     color:white;
 }
 .intro-title{
-    font-family: "Nanum Pen Script";
-    font-size: 50px;
-    grid-column: 5/ 7;
-    margin-top: auto;
+    font-family: "Nanum Pen Script";;
+
+    text-align: center;
 }
 
 #intro-msg{
     text-align: center;
-    display: grid;
-    grid-template: repeat(2, 1fr) / repeat(10, 1fr);
+    display: flex;
+    flex-direction: column;
+    margin-left: 15%;   
+    margin-right: 15%; 
+    margin-top: 5%;
 }
 
 #intro-msg p{
@@ -80,6 +82,7 @@ nav a:hover {
     display:grid;
     grid-template-columns: repeat(3, 1fr);
     font-family:"Nanum Pen Script";
+
 }
 
 main section{
@@ -99,13 +102,14 @@ main section{
 }
 .japan-card, .euro-card, .africa-card{
     margin: 75px 0px;
+
 }
 
 .card-img{
     border: 10px solid #95BF74 ;
     border-radius: 10px;
-    width: 100%;
-    height: auto ;
+  
+  
     /* transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364; */
 }
@@ -118,7 +122,7 @@ footer{
     background-color:#90D5FF;
     color:black;
     padding: 25px 50px;
-    margin-top: 200px;
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
